# food-scraper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  _typos.toml  main.py  makefile  overview.md  prices.json  products.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  sample.md  setup.cfg  test_scraping.py  timeline.md
.github/workflows/: charts.yml  run.yml  test.yml
chow/: archive.py  logger.py
chow/usecases/: __init__.py  charts.py  overview.py  price_fetching.py  product_docs.py  timeline.py
data/: archive.json  products.json
docs/: overview.md  product-13175011.md  product-225627011.md  product-23476011.md  product-240875011.md  product-293721011.md  product-301848011.md  product-31833011.md  product-32003011.md  product-321394011.md  product-44855011.md  product-44858011.md  product-47305011.md  product-505092011.md  product-505309011.md  product-506077011.md  product-510734011.md  product-510737011.md  product-510858011.md  product-511957011.md  product-514022011.md  product-520104011.md  product-528017011.md  product-53687011.md  product-556966011.md  product-57272011.md  product-57293011.md  product-57453011.md  product-587564011.md  product-59009011.md  product-59106011.md  product-59123011.md  product-592687011.md  product-59394011.md  product-600908011.md  product-60110011.md  product-613748011.md  product-63026011.md  product-63741011.md  product-64861011.md  (+12 more)
src/chow/: __main__.py  archive.py
src/chow/usecases/: __init__.py  charts.py  overview.py  price_fetching.py  product_docs.py  timeline.py
tests/: conftest.py  factories.py  test_factories.py
tests/fixtures/: ocado_product.html
tests/functional/: conftest.py  test_generate_graphs.py  test_generate_overview.py  test_generate_product_detail_documents.py  test_generate_timeline.py  test_update_price_archive.py
tests/integration/: test_ocado_fetching.py
tests/unit/: test_main.py
tests/unit/chow/: test_archive.py
tests/unit/chow/usecases/: test_charts.py  test_price_fetching.py  test_product_docs.py  test_timeline.py
